--- a/projeto site thialy/styleindex.css
+++ b/projeto site thialy/styleindex.css
@@ -65,6 +65,9 @@ body{
     main{
         margin: auto;
         background-color: #f2cec9;
+        background-image: url(img/thicasozinha.png);
+        background-repeat: no-repeat;
+        background-position: right bottom;
         width: 550px;
         height: 400px;
         padding: 30px;
