--- a/exercicios/ex32mediaqueries/mq004/estilos/style.css
+++ b/exercicios/ex32mediaqueries/mq004/estilos/style.css
@@ -6,25 +6,50 @@
     font-family: Arial, Helvetica, sans-serif;
     
 }
+
+
 body{
     background-color: rgb(199, 199, 199);
 }
+
+
 header{
     background-color: rgb(148, 148, 148);
 }
+
+
 header > h1{
     padding: 10px;
     text-align: center;
     text-shadow: 2px 2px 0px rgba(255, 255, 255, 0.398);
 }
 
-menu{
+
+header>span#itens{
+    background-color: rgb(44, 44, 44);
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
     display: block;
 }
+
+
+span#itens:hover{
+    background-color: white;
+    color: black;
+}
+
+
+menu{
+    display: none;
+}
+
 
 menu > ul{
     list-style-type: none;
 }
+
 
 menu > ul > li > a{
     display: block;
@@ -37,9 +62,11 @@ menu > ul > li > a{
 
 } 
 
+
 menu > ul > li > a:hover {
     background-color: gray;
 }
+
 
 main{
     
@@ -51,13 +78,16 @@ main{
     background-color: white;
 }
 
+
 main > h2{
     font-size: 1.2em;
 }
 
+
 main > legend{
     font-size: 0.6em;
 }
+
 
 article{
 padding-top: 20px;
@@ -66,6 +96,7 @@ text-indent: 10px;
 text-align: justify;
 font-size: 0.9em;
 }
+
 
 footer{
     background-color:rgba(87, 87, 87);
