--- a/exercicios/ex32mediaqueries/mq004/estilos/style.css
+++ b/exercicios/ex32mediaqueries/mq004/estilos/style.css
@@ -25,7 +25,7 @@ header > h1{
 }
 
 
-header>span#itens{
+header>i#burguer{
     background-color: rgb(44, 44, 44);
     color: white;
     text-align: center;
@@ -35,7 +35,7 @@ header>span#itens{
 }
 
 
-span#itens:hover{
+i#burguer:hover{
     background-color: white;
     color: black;
 }
@@ -105,3 +105,24 @@ footer{
     color: white;
     border-radius: ;
 }
+
+
+    
+@media screen and (min-width: 768px) {
+
+
+    i#burguer {
+         display: none;
+     }
+     menu {
+         display: block;
+     }
+ 
+     menu > ul > li {
+         display: inline-block;
+     }
+     main{
+        width: 700px;
+     }
+ }   
+    
