--- a/projeto site thialy/styleindex.css
+++ b/projeto site thialy/styleindex.css
@@ -1,4 +1,9 @@
 @charset "utf-8";
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
 @font-face {
     font-family: font01;
     src: url(font/cocogoose_classic/Cocogoose-Classic-Medium-trial.ttf);
